cluster/apps/apps/changedetection.io/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: apps
  name: changedetection
spec:
  selector:
    matchLabels:
      app: changedetection
  replicas: 1
  template:
    metadata:
      labels:
        app: changedetection
    spec:
      containers:
      - name: changedetection
        image: dgtlmoon/changedetection.io@sha256:c62e7a14f43a82939d8de774875f3a4c3c25a7ea45f702e1eb2a860eebfbfa8f
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 200Mi
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /datastore
          name: changedetection-data
      volumes:
      - name: changedetection-data
        persistentVolumeClaim:
          claimName: changedetection-data
