cluster/apps/apps/changedetection.io/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: apps
  labels:
    app: changedetection
  name: changedetection
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_TARGET_SKY}"
    traefik.ingress.kubernetes.io/router.middlewares: identity-forward-auth@kubernetescrd
spec:
  tls:
    - secretName: wiki-tls
      hosts:
        - change.${SECRET_DOMAIN_ME}
  rules:
    - host: change.${SECRET_DOMAIN_ME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: changedetection
                port:
                  number: 5000
